--- a/VIP_SUMMARIZER/requirements.txt
+++ b/VIP_SUMMARIZER/requirements.txt
@@ -1,7 +1,7 @@
 clipboard==0.0.4
-streamlit==1.1.0
-gensim==3.8.3
-pandas==1.1.3
+rouge==1.0.0
+streamlit==0.80.0
+gensim==4.0.1
 altair==4.1.0
-numpy==1.19.2
-scipy==1.5.2
+pandas==1.2.3
+sumy==0.8.1
