--- a/VIP_SUMMARIZER/requirements.txt
+++ b/VIP_SUMMARIZER/requirements.txt
@@ -1,12 +1,15 @@
-rouge==1.0.0
 streamlit==1.1.0
-gensim==3.6.0
-altair==4.1.0
+Pyro4==4.77
+Sphinx==3.5.2
+annoy==1.16.2
+memory-profiler==0.55.0
+nltk==3.4.5
+nmslib==2.1.1
 pandas==1.2.3
-sumy==0.8.1
-nltk==3.5
-fastapi==0.61.2
-wordcloud==1.8.1
-neattext==0.1.0
-matplotlib==3.3.4
-sumy==0.8.1
+pyemd==0.5.1
+scikit-learn==0.24.1
+sphinx-gallery==0.8.2
+sphinxcontrib-napoleon==0.7
+sphinxcontrib-programoutput==0.15
+statsmodels==0.12.2
+testfixtures==6.17.1
