--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
-clipboard==0.0.4
+rouge==1.0.0
 streamlit==1.1.0
-transformers==4.12.2
-tensorflow==2.6.0
-gensim
+gensim==3.8.3
+pandas==1.2.3
+sumy==0.8.1
+nltk==3.5
+PyPDF2==1.26.0
+# PyMuPDF==1.18.12
+wordcloud==1.8.1
+neattext==0.1.0
+matplotlib==3.3.4
+nltk==3.5
