--- a/VIP_QR_DETECTOR/requirements.txt
+++ b/VIP_QR_DETECTOR/requirements.txt
@@ -5,5 +5,6 @@ streamlit-webrtc==0.31.1
 av==8.0.3
 typing_extensions==3.10.0.2
 mediapipe==0.8.8.1
+qrcode==7.3.1
 pyzbar==0.1.8
-zbar==0.10 
+zbar==0.10
